--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "middleware-rest-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/web-lynx/middleware-rest-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/web-lynx/middleware-rest-api/issues"
-  },
-  "homepage": "https://github.com/web-lynx/middleware-rest-api#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "mongoose": "^6.2.1"
-  }
+    "name": "middleware-rest-api",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "nodemon src/server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/web-lynx/middleware-rest-api.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/web-lynx/middleware-rest-api/issues"
+    },
+    "homepage": "https://github.com/web-lynx/middleware-rest-api#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.2",
+        "mongoose": "^6.2.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    }
 }
