--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/web-lynx/middleware-rest-api#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.2",
         "mongoose": "^6.2.1"
